Network/Infra/WAN/templates/GitPodsReg.yaml
kind: Service
apiVersion: v1
metadata:
  name: gitpods-reg-gw
  labels:
    lan-mode: private
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'reg.gitpods.writemy.codes'
spec:
  type: ExternalName
  externalName: registry-facade.core-prod.svc.cluster.local
