Network/Infra/WAN/templates/IstioGateway.yaml
kind: Service
apiVersion: v1
metadata:
  name: istio-gw-dns-tmp
  labels:
    lan-mode: private
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'istio.mylogin.space'
spec:
  type: ExternalName
  externalName: 10.0.1.65
