Network/Infra/WAN/templates/Legacy.yaml
kind: Service
apiVersion: v1
metadata:
  name: legacy-gw
  labels:
    lan-mode: private
  annotations:
    external-dns.alpha.kubernetes.io/hostname: '*.git.writemy.codes,idp.mylogin.space,bitwarden.kristianjones.dev'
spec:
  type: ExternalName
  externalName: traefik-core.gitlab-managed-apps.svc.cluster.local
