Network/Infra/WAN/templates/LegacyControlCenter.yaml
kind: Service
apiVersion: v1
metadata:
  name: legacy-controlcenter
spec:
  type: ExternalName
  externalName: homeassistant-home1-home-assistant.brokers-prod.svc.cluster.local
  ports:
    - protocol: TCP
      name: http
      port: 8123
