Network/Infra/WAN/templates/LegacyControlCenterCode.yaml
kind: Service
apiVersion: v1
metadata:
  name: legacy-controlcenter-code
spec:
  type: ExternalName
  externalName: homeassistant-home1-home-assistant-codeserver-brokers-prod.service.dc1.kjdev
  ports:
    - protocol: TCP
      name: http
      port: 12321
