Network/Infra/WAN/templates/MCDNS.yaml
kind: Service
apiVersion: v1
metadata:
  name: mc-dns-gw
  labels:
    lan-mode: private
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'mc.mylogin.space'
spec:
  type: ExternalName
  externalName: 10.1.1.32
