Network/Infra/WAN/templates/MailTest.yaml
kind: Service
apiVersion: v1
metadata:
  name: email-test
  labels:
    lan-mode: private
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'mail.mylogin.space'
spec:
  type: ExternalName
  externalName: 66.165.222.125
