Network/Infra/WAN/templates/NSInfra.yaml
kind: Service
apiVersion: v1
metadata:
  name: ns-infra-wan-gw
  labels:
    wan-mode: public
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'ns1.resolvemy.host,ns4.resolvemy.host'
spec:
  type: ExternalName
  externalName: 66.165.222.105
