Network/Infra/WAN/templates/NSPrimary.yaml
kind: Service
apiVersion: v1
metadata:
  name: nsmain-anycast-wan-gw
  labels:
    wan-mode: public
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'ns2.resolvemy.host'
spec:
  type: ExternalName
  externalName: 66.165.222.100
