Network/Infra/WAN/templates/NSSecondary.yaml
kind: Service
apiVersion: v1
metadata:
  name: ns4-wan-gw
  labels:
    wan-mode: public
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'ns3.resolvemy.host,ns.resolvemy.host'
spec:
  type: ExternalName
  externalName: 66.165.222.102
