Network/Infra/WAN/templates/Node0.yaml
kind: Service
apiVersion: v1
metadata:
  name: node0-tmp
  labels:
    lan-mode: private
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'node0.core0.dc1.kristianjones.dev'
spec:
  type: ExternalName
  externalName: 10.1.1.10
