Network/Infra/WAN/templates/Node3.yaml
kind: Service
apiVersion: v1
metadata:
  name: node3-tmp
  labels:
    lan-mode: private
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'node3.core0.dc1.kristianjones.dev'
spec:
  type: ExternalName
  externalName: 10.1.1.13
