Network/Infra/WAN/templates/PrivateGW.yaml
kind: Service
apiVersion: v1
metadata:
  name: private-wan-gw
  labels:
    lan-mode: private
  annotations:
    external-dns.alpha.kubernetes.io/hostname: k0s-dc1.resolvemy.host
spec:
  type: ExternalName
  externalName: 10.1.1.84
