Network/Infra/WAN/templates/PublicWANGW.yaml
kind: Service
apiVersion: v1
metadata:
  name: public-wan-gw
  labels:
    wan-mode: public
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'k0s-dc1.resolvemy.host,nat.ipaddr.network,mc.mylogin.space,unifi.ipaddr.network,ipam.ipaddr.network,*.gitpods.writemy.codes,*.ws.gitpods.writemy.codes,*.git.writemy.codes,accessmyporn.download,ns1.resolvemy.host'
spec:
  type: ExternalName
  externalName: 66.165.222.101
