Network/Infra/WAN/templates/SyncDateTest.yaml
kind: Service
apiVersion: v1
metadata:
  name: syncmydate-test
  labels:
    lan-mode: private
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'syncmy.date'
spec:
  type: ExternalName
  externalName: 66.165.222.123
