Network/Infra/WAN/templates/vCenter.yaml
kind: Service
apiVersion: v1
metadata:
  name: vcsa
  labels:
    lan-mode: private
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'vcsa.kristianjones.dev'
spec:
  type: ExternalName
  externalName: 172.16.20.90
