Network/Infra/WAN/templates/MCGateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mc-gateway
spec:
  selector:
    istio: tcp-ingress
  servers:
    - hosts:
        - '*'
      port:
        number: 25565
        name: minecraft
        protocol: TCP
