Network/Infra/WAN/templates/MCProxy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mc-proxy
spec:
  hosts:
    - '*'
  gateways:
    - mc-gateway
  tcp:
    - match:
        - port: 25565
      route:
        - destination:
            host: mc-proxy-ingress-controller
            port:
              number: 25565
